idea/testData/checker/regression/ClassDeclarationAsExpression.fir.kt
val p = 1 <error descr="[OVERLOAD_RESOLUTION_AMBIGUITY] Overload resolution ambiguity between candidates: [kotlin/Int.compareTo, kotlin/Int.compareTo, kotlin/Int.compareTo, ...]"><</error> <error descr="[EXPRESSION_EXPECTED] ">class A {
    fun f() {
        f()
    }
}</error>
